force-app/main/default/objects/AM_Vehicle_Image__c/AM_Vehicle_Image__c.object-meta.xml
<CustomObject>
    <label>AM Vehicle Image</label>
    <nameField>
        <displayFormat>AMVI-{0000}</displayFormat>
        <label>AM Vehicle Image ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Vehicle Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>