force-app/main/default/objects/AM_Vehicle_Image__c/fields/AM_Exterior_Image_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Exterior_Image_2__c</fullName>
    <formula>IMAGE( AM_Vehicle_Exterior_Image_2__c ,&quot; &quot;,150,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Exterior Image 2</label>
    <type>Text</type>
</CustomField>