force-app/main/default/objects/AM_Vehicle_Image__c/fields/AM_Main_Image__c.field-meta.xml
<CustomField>
    <fullName>AM_Main_Image__c</fullName>
    <formula>IMAGE(AM_Vehicle_Main_Image__c,&quot;&quot;,150,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Main Image</label>
    <type>Text</type>
</CustomField>