force-app/main/default/objects/AM_Vehicle_Image__c/fields/AM_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AM Vehicle Images</relationshipLabel>
    <relationshipName>AM_Vehicle_Images</relationshipName>
    <type>Lookup</type>
</CustomField>