force-app/main/default/objects/AM_Vehicle_Image__c/fields/AM_Vehicle_Exterior_Image_2__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Exterior_Image_2__c</fullName>
    <label>AM Vehicle Exterior Image 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>