force-app/main/default/objects/AM_Vehicle_Image__c/fields/AM_Vehicle_Main_Image__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Main_Image__c</fullName>
    <label>AM Vehicle Main Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>